AMBARI-256 (clemlab): Execute DML update on ambari-server for supporting INFRA SOLR ENV java version before Stack Upgrade